# vertu_sales_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  batch_test_generator.py  check_csv.py  docker-build.sh  docker-compose.yml  env.example  evaluate_mock_sessions.py  jd_tm_qa_filtered.csv  jd_tm_qa_filtered.csv.bak  main.py  middle_gen.json  mock_questions.json  pyproject.toml  requirements.txt  style.md  test_output_21ce0990.json  test_output_271a164a.json  test_output_5c3584ca.json  test_output_6bdfb601_20260312_111928.json  test_output_81e41cb1.json  test_output_9571b4e8_20260311_221535.json  test_output_d5459cfd_20260312_112756.json  test_output_e4da0053.json  test_referee_single.py
app/: app.py  config.py  scanner.py  simulation_main.py  simulation_util.py
batch_test_results_20260304_141848/: anxious_detailed.json  bilingual_detailed.json  confrontational_detailed.json  full_report.json  intermediate_progress.json  novice_detailed.json  professional_detailed.json
batch_test_results_20260304_153402/: anxious_detailed.json  bilingual_detailed.json  confrontational_detailed.json  full_report.json  intermediate_progress.json  novice_detailed.json  professional_detailed.json
batch_test_results_20260304_201724/: anxious_detailed.json  bilingual_detailed.json  confrontational_detailed.json  full_report.json  intermediate_progress.json  novice_detailed.json  professional_detailed.json
batch_test_results_20260304_205902/: anxious_detailed.json  bilingual_detailed.json  confrontational_detailed.json  full_report.json  intermediate_progress.json  (+2 more)
(+191 files in other folders)
